[package]
name = "glide-rs"
version = "0.1.0"
authors = ["MordragT <scrat_games@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_enum = "0.5.1"
wgpu = "0.7.0"
raw-window-handle = "0.3.3"
glam = "0.12.0"
futures = "0.3.12"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }