[package]
name = "glide-rs"
version = "0.1.0"
authors = ["MordragT <scrat_games@gmx.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.10"
wgpu = "0.15"
winit = "0.28"
raw-window-handle = "0.5"
num_enum = "0.5"
glam = "0.23"
pollster = "0.3.0"
thiserror = "1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }